# sample

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
Modules/: Findlibsb.cmake  common.cmake
benchmark/accumulator/: CMakeLists.txt  accumulator_benchmark.ipp  main.cpp  with_circular_buffer.cpp  with_deque.cpp  with_devector.cpp
sb/: devector.h
sb/message/: accumulator.h
sb/message/detail/: accum_iterator.ipp  accumulator.ipp  pointer_iterator.ipp
test/: CMakeLists.txt
test/accumulator/: CMakeLists.txt  main.cpp
